# allo-deploy

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Foundry.toml  README.md  package.json  pnpm-lock.yaml  remappings.txt
scripts/: Apply.s.sol  ApproveReject.s.sol  Deploy.s.sol  wait_for_blocks.rs
src/: main.rs  wait_for_blocks.rs
